Fixed alignment of month/year selectors in bootstrap datepicker

--- a/static/js/datepicker/less/datepicker.less
+++ b/static/js/datepicker/less/datepicker.less
@@ -68,7 +68,7 @@
 		}
 		span {
 			display: block;
-			width: 47px;
+			width: 46px;
 			height: 54px;
 			line-height: 54px;
 			float: left;
